force-app/main/default/objects/leaseworks__Credit_Memo__c/leaseworks__Credit_Memo__c.object-meta.xml
<CustomObject>
    <description>Credit memo object
Enables users to document and track instances where customers are owed refunds or credits due to various reasons such as returned merchandise, pricing adjustments, or billing errors.
Population Requirement Details: Conditionally Required if legacy data loading is required
[MODULE: Finance]
[LOAD: Yes]
[PREREQUISITES: Lessee]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Credit Memo #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>