force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/Exclude_from_Receivables_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Receivables_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box to exclude the Credit Note from the A/R balance. For scenarios where the amount or disposition is not yet certain.</inlineHelpText>
    <label>Exclude from Receivables Reporting</label>
    <type>Checkbox</type>
</CustomField>