force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <label>Z_Unused_2512 Credit Memo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>