force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Asset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Aircraft__c.leaseworks__Status__c</field>
            <operation>notEqual</operation>
            <value>Sold</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Aircraft__c.leaseworks__Sold__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Asset</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>