force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Available_Credit_Memo_Amount_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Available_Credit_Memo_Amount_F__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2512 Balance Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>