force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Currency__c</fullName>
    <description>Represents the credit memo amount converted into the corporate (ledger) currency using the FX Rate.</description>
    <inlineHelpText>Select the currency to apply to this credit memo</inlineHelpText>
    <label>Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>