force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cancellation_Date__c</fullName>
    <description>The date of credit memo cancellation</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>