force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2406_Company</label>
    <referenceTo>leaseworks__Legal_Entity__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>