force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Converted_to_Payable__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Converted_to_Payable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox indicates if this credit memo is converted to a payable record.</inlineHelpText>
    <label>Converted to Payable</label>
    <type>Checkbox</type>
</CustomField>