force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Credit_Memo_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Memo_Amount_New__c</fullName>
    <description>Enter the total amount to credit, in the selected currency.</description>
    <inlineHelpText>Enter the total amount to credit, in the selected currency.</inlineHelpText>
    <label>Credit Memo Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>