force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Credit_Memo_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Memo_Date__c</fullName>
    <label>Credit Memo Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>