force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Credit_Memo_Reason__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Memo_Reason__c</fullName>
    <label>Credit Memo Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rent Reduction</fullName>
                <default>true</default>
                <label>Rent Reduction</label>
            </value>
            <value>
                <fullName>Lessor Credit</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MR Reconciliation Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>