force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__CreditMemo_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CreditMemo_Display_Name__c</fullName>
    <description>This display name is used in the Payment studio to show the list of Credit Memo when Payment source is chosen as &apos;Credit Memo&apos;
    [LOAD:No]
    [JUSTIFICATION:This is formula text field, no needs to do LOAD]
    [REPLACEMENT OBJECT API:NA]
    [REPLACEMENT FIELD API:NA]
    [COMMENTS:NA]&quot;</description>
    <formula>IF(
    leaseworks__Multicurrency_Enabled__c,
    Name &amp; &quot; | &quot; &amp; leaseworks__Lessee_New__r.Name &amp; &quot; | &quot; &amp; TEXT(leaseworks__Credit_Memo_Amount_New__c),
    Name &amp; &quot; | &quot; &amp; leaseworks__Lessee_New__r.Name &amp; &quot; | $&quot; &amp; TEXT(leaseworks__Credit_Memo_Amount_New__c)
)</formula>
    <label>_CreditMemo Display Name</label>
    <type>Text</type>
</CustomField>