force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Currency__c</fullName>
    <label>Z_Unused_2512 Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>