force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Entity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Entity__c.leaseworks__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Entity__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>