force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_Comments__c</fullName>
    <description>Users can record internal notes here. These comments are never to be mapped to print on customer-facing documents.</description>
    <inlineHelpText>Provide internal notes or reasons for issuing this credit memo. These comments are for internal use only and help support audit and reporting purposes.</inlineHelpText>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>