force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the invoice when we are creating credit memo corrections.</description>
    <inlineHelpText>Lookup to the invoice when we are creating credit memo corrections.</inlineHelpText>
    <label>_Source Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>