force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>leaseworks__Lease__c.leaseworks__Lessee_New__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lessee_New__c</valueField>
        </filterItems>
        <filterItems>
            <field>leaseworks__Lease__c.leaseworks__Operator_New__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lessee_New__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Credit Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>