force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Ledger_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ledger_Amount__c</fullName>
    <description>Represents the credit memo amount converted into the corporate (ledger) currency using the Exchange Rate.</description>
    <formula>IF( ISPICKVAL(leaseworks__Billing_Currency__c,&apos;USD&apos;), leaseworks__Credit_Memo_Amount_New__c, leaseworks__Credit_Memo_Amount_New__c* leaseworks__Exchange_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Memo Amount converted into corporate currency using the applicable exchange rate.</inlineHelpText>
    <label>Ledger Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>