force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Linked_Payable__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Linked_Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connect this Credit Memo to the Payable record generated through the Convert to Payable process.
[LOAD:Optional]
[JUSTIFICATION:Populate when CM is converted to Payable]
[REPLACEMENT OBJECT API:NA]
[REPLACEMENT FIELD API:NA]
[COMMENTS:NA]</description>
    <inlineHelpText>Links this Credit Memo to the Payable record created through the Convert to Payable process.</inlineHelpText>
    <label>Linked Payable</label>
    <referenceTo>leaseworks__Payable__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>