force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Memo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Memo__c</fullName>
    <description>Please enter a brief description.</description>
    <inlineHelpText>Enter any comments or explanations you wish to share externally with the customer. This message may appear on customer-facing documents or communications.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>