force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Multicurrency_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Multicurrency_Enabled__c</fullName>
    <description>This hidden checkbox controls the conditional display of fields on the layout when multicurrency is enabled.</description>
    <formula>IF(NOT(ISBLANK(TEXT(leaseworks__Billing_Currency__c))),
    IF(ISPICKVAL(leaseworks__Billing_Currency__c, &quot;USD&quot;),false,true), false)</formula>
    <label>_Multicurrency Enabled</label>
    <type>Checkbox</type>
</CustomField>