force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Reconciliation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconciliation Schedule</label>
    <referenceTo>leaseworks__Reconciliation_Schedule__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>