force-app/main/default/objects/leaseworks__Credit_Memo__c/fields/leaseworks__Utilization_Report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Utilization</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Error: Please ensure the selected Utilization is approved and it belongs to the same lease.</errorMessage>
        <filterItems>
            <field>$Source.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Utilization_Report__c.leaseworks__Y_hidden_Lease__c</valueField>
        </filterItems>
        <filterItems>
            <field>leaseworks__Utilization_Report__c.leaseworks__Status__c</field>
            <operation>equals</operation>
            <value>Approved By Lessor</value>
        </filterItems>
        <infoMessage>Please select an approved utilization.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>