force-app/main/default/objects/leaseworks__Credit_Memo__c/validationRules/leaseworks__CreditMemoApprovedOnCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CreditMemoApprovedOnCreate</fullName>
    <active>true</active>
    <description>Create Memos should not be created in Approved status</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c,ISNEW(), leaseworks__Y_Hidden_IsStandalone__c, OR(isPickVal(leaseworks__Status__c,&#39;Submitted&#39; ),isPickVal(leaseworks__Status__c,&#39;Approved&#39; ),isPickVal(leaseworks__Status__c,&#39;Cancelled-Pending&#39; ),isPickVal(leaseworks__Status__c,&#39;Cancelled&#39; )))</errorConditionFormula>
    <errorDisplayField>leaseworks__Status__c</errorDisplayField>
    <errorMessage>Credit Memos should only be created in Pending status. Approval must be done post creation.</errorMessage>
</ValidationRule>