force-app/main/default/objects/leaseworks__Credit_Memo__c/validationRules/leaseworks__Entity_Required_if_Accounting_Enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Entity_Required_if_Accounting_Enabled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, leaseworks__Y_Hidden_Acc_Enabled__c ,ISBLANK( leaseworks__Entity__c ))</errorConditionFormula>
    <errorMessage>Entity is a required field.</errorMessage>
</ValidationRule>