force-app/main/default/objects/leaseworks__Credit_Memo__c/validationRules/leaseworks__Exchange_Rate_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Exchange_Rate_Positive</fullName>
    <active>true</active>
    <description>Exchange Rate Should be Positive</description>
    <errorConditionFormula>IF(AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c,NOT(ISPICKVAL( leaseworks__Billing_Currency__c ,&apos;USD&apos;))),OR(leaseworks__Exchange_Rate__c &lt;= 0,ISBLANK(leaseworks__Exchange_Rate__c), ISNULL(leaseworks__Exchange_Rate__c) ),false)</errorConditionFormula>
    <errorDisplayField>leaseworks__Exchange_Rate__c</errorDisplayField>
    <errorMessage>Exchange Rate should be greater than zero.</errorMessage>
</ValidationRule>