force-app/main/default/objects/leaseworks__Credit_Memo__c/validationRules/leaseworks__NoManualStausUpdateToPending.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NoManualStausUpdateToPending</fullName>
    <active>true</active>
    <description>Status cannot be updated to Pending Manually</description>
    <errorConditionFormula>AND( ISCHANGED(leaseworks__Status__c),ISPICKVAL(leaseworks__Status__c , &apos;Pending&apos;),
				ISPICKVAL(	PRIORVALUE(leaseworks__Status__c),&apos;Approved&apos;) )</errorConditionFormula>
    <errorMessage>Update from Approved to Pending is not allowed</errorMessage>
</ValidationRule>