force-app/main/default/objects/leaseworks__Credit_Memo__c/validationRules/leaseworks__Prevent_Negative_Credit_Memo_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Prevent_Negative_Credit_Memo_Amount</fullName>
    <active>true</active>
    <description>This Validation is to inform the user that we can not  create a Credit Memo with a negative amount.</description>
    <errorConditionFormula>AND(
    NOT($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c),
    leaseworks__Credit_Memo_Amount_New__c&lt; 0
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Credit_Memo_Amount_New__c</errorDisplayField>
    <errorMessage>Credit Memo Amount should not be negative.</errorMessage>
</ValidationRule>