force-app/main/default/objects/leaseworks__Credit_Memo__c/validationRules/leaseworks__ValidateCreditMemoOnApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ValidateCreditMemoOnApproval</fullName>
    <active>true</active>
    <description>Sum of the distribution amount should be equal to the related Credit Memo amount.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
    OR( 
       ISPICKVAL(leaseworks__Status__c, &quot;Approved&quot;),
       ISPICKVAL(leaseworks__Status__c, &quot;Declined&quot;)
    ),
    OR(
       TEXT(PRIORVALUE(leaseworks__Status__c)) = &quot;Pending&quot;,
       TEXT(PRIORVALUE(leaseworks__Status__c)) = &quot;Submitted&quot;
    ),
    leaseworks__Total_Distribution_Amount__c &lt;&gt; leaseworks__Credit_Memo_Amount_New__c,
    leaseworks__Total_Distribution_Amount__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Sum of the distribution amount should be equal to the related Credit Memo amount.</errorMessage>
</ValidationRule>