force-app/main/default/objects/leaseworks__Credit_Memo__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>CMS_Reference_Number_Local__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>leaseworks__Balance_Available_New__c</columns>
    <columns>leaseworks__Credit_Memo_Amount_New__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Credit_Memo_Type__c</columns>
    <columns>leaseworks__Credit_Memo_Reason__c</columns>
    <columns>leaseworks__Memo__c</columns>
    <columns>leaseworks__Lessee_New__c</columns>
    <columns>leaseworks__Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>