force-app/main/default/objects/leaseworks__Credit_Memo__c/listViews/Pending_Credit_Memos.listView-meta.xml
<ListView>
    <fullName>Pending_Credit_Memos</fullName>
    <columns>CMS_Reference_Number_Local__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>leaseworks__Available_Credit_Memo_Amount_F__c</columns>
    <columns>leaseworks__Amount__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Credit_Memo_Reason__c</columns>
    <columns>leaseworks__Memo__c</columns>
    <columns>leaseworks__Lessee_New__c</columns>
    <columns>leaseworks__Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>leaseworks__Lessee_New__c</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <label>Pending Credit Memos</label>
</ListView>